[metadata]
name = mrc-viewer
version = 0.1.0
description = Lightweight MRC viewer with filters and annotations
author = Your Name
license = MIT

[options]
py_modules = mrc_viewer_v3
install_requires =
    numpy
    mrcfile
    qtpy
    napari>=0.7.0
    scipy
    pyfftw

[options.entry_points]
console_scripts =
    mrc-viewer = mrc_viewer_v3:main
